Qt: Rename REPL to Console

--- a/src/platform/qt/DebuggerConsole.ui
+++ b/src/platform/qt/DebuggerConsole.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>DebuggerREPL</class>
- <widget class="QWidget" name="DebuggerREPL">
+ <class>DebuggerConsole</class>
+ <widget class="QWidget" name="DebuggerConsole">
   <property name="geometry">
    <rect>
     <x>0</x>
