Qt: TBL support in Memory Viewer

--- a/src/platform/qt/MemoryView.ui
+++ b/src/platform/qt/MemoryView.ui
@@ -225,6 +225,13 @@
          </property>
         </widget>
        </item>
+       <item>
+        <widget class="QPushButton" name="loadTBL">
+         <property name="text">
+          <string>Load TBL</string>
+         </property>
+        </widget>
+       </item>
       </layout>
      </item>
     </layout>
